K8S/fleurfrontend-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleurfrontendnpservice
spec:
  type: NodePort
  selector: 
    app: fleurfrontend
  ports:
    - name: fleurfrontend
      protocol: TCP
      port: 80
      targetPort: 80
