K8S/productapi-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: productapinpservice
spec:
  type: NodePort
  selector: 
    app: productapiservice
  ports:
    - name: productapiservice
      protocol: TCP
      port: 80
      targetPort: 80
